syntax = "proto3";

option go_package = "./proto";

package services;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 2;
}

service ExampleService {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}
